Completed creating inserter Tool

--- a/cassandra-inserter/src/main/resources/application.conf
+++ b/cassandra-inserter/src/main/resources/application.conf
@@ -2,18 +2,21 @@
 datastax-java-driver {
   basic.contact-points = [ "xxx.xxx.xxx.xxx:9142", "xxx.xxx.xxx.xxx:9142" ]
   basic.request {
-    // timeout = 2 seconds
+    timeout = 2 seconds
     consistency = LOCAL_QUORUM
   }
+  basic.load-balancing-policy {
+    local-datacenter = SIOSDC01
+  }
+
   advanced.auth-provider {
+    class = PlainTextAuthProvider
     username = cassandra
     password = cassandra
   }
-
   advanced.ssl-engine-factory {
     class = DefaultSslEngineFactory
-    // cipher-suites = [ "TLS_RSA_WITH_AES_128_CBC_SHA", "TLS_RSA_WITH_AES_256_CBC_SHA" ]
-    // hostname-validation = true
+    hostname-validation = false
     truststore-path = /path/to/client.truststore
     truststore-password = password
     keystore-path = /path/to/client.keystore
